album skips, album metadata, cleaned miniGuide

--- a/extension/myTemplateElements.html
+++ b/extension/myTemplateElements.html
@@ -97,6 +97,10 @@
 	<input type="text" _group="0">
 	<div class="c-underline" _group="0"></div>
 </div>
+<div class="c-check-input">
+	<input type="checkbox" _group="0">
+	<label _group="0"></label>
+</div>
 
 <div class="c-popup-text-line">
 	<label></label>
