session storage good + extraSongs nearly work

--- a/extension/popup/index.html
+++ b/extension/popup/index.html
@@ -75,8 +75,10 @@
 
 		<div id="debug-cont" style="display: none;">
 			<button id="r-dmp">Dump Local Storage</button>
-			<button id="c-dmp">Dump Ext Storage</button>
-			<button id="clr-strg" class="danger">Clear Browser Storage (EXT intact)</button>
+			<button id="er-dmp">Dump Ext Storage (REFRESH)</button>
+			<button id="e-dmp">Dump Ext Storage</button>
+			<button id="s-dmp">Dump Session Storage</button>
+			<button id="clr-strg" class="danger">Clear Local Storage</button>
 			<textarea rows="6" cols="25" id="run-code-input" placeholder="Paste in JSON to fully replace storage with. No undo. **MUST BE CLEAN STORAGE, NOT RAW**"></textarea>
 			<button id="run-code-bkg" style="padding: 0;">Set ExtStorage to textarea value</button>
 			<button id="set-uid" style="padding: 0; font-size: 0.8em;">Set Storage UID to textarea value</button>
