light show v1 no saving yet

--- a/extension/popup/index.html
+++ b/extension/popup/index.html
@@ -86,6 +86,7 @@
 					<button id="dim" style="flex: 50%;">Dim</button>
 					<button id="undim" style="flex: 50%;">Undim</button>
 				</div>
+				<button id="goto-ls" style="width: 100%;">Light Show</button>
 			</div>
 			
 			<button type="button" id="debug" style="margin-top: 22px;">Debug Actions</button>
@@ -104,6 +105,7 @@
 			<button id="set-uid" style="padding: 0; font-size: 0.8em;">Set Storage UID to textarea value</button>
 			<button id="set-token" style="padding: 0;">Set API token to textarea value</button>
 			<button id="set-light-api" style="padding: 0;">Set Lights API to textarea value</button>
+			<button id="set-entities-api" style="padding: 0;">Set EntitiesToKeys TTAV</button>
 		</div>
 
 		<a id="error" style="text-align: left; word-break: keep-all;"></a>
