wokring on light show saving

--- a/extension/popup/index.html
+++ b/extension/popup/index.html
@@ -88,6 +88,7 @@
 				</div>
 				<button id="goto-ls" style="width: 100%;">Light Show</button>
 			</div>
+			<button id="ref-side">Refresh Sidebar</button>
 			
 			<button type="button" id="debug" style="margin-top: 22px;">Debug Actions</button>
 			
