--- a/extension/pages/lightshow/index.html
+++ b/extension/pages/lightshow/index.html
@@ -8,7 +8,12 @@
 	<title>Light Show</title>
 </head>
 <body>
+	<button class="record">Start Recording</button>
 	<h1>Light Show!</h1>
+	<h2>Number buttons above QWERTY for lights.</h2>
+	<h2>Backspace to fade dim out all lights.</h2>
+	<h2>Shift or + to not undim when key released.</h2>
+	<h2>Numpad to control brightness</h2>
 	<a class="content"></a>
 </body>
 </html>
