--- a/extension/myTemplateElements.html
+++ b/extension/myTemplateElements.html
@@ -73,6 +73,11 @@
 <svg class="album" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 14.5c-2.49 0-4.5-2.01-4.5-4.5S9.51 7.5 12 7.5s4.5 2.01 4.5 4.5-2.01 4.5-4.5 4.5zm0-5.5c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"/></svg>
 <svg class="undo" viewBox="0 0 24 24"><path d="M12.5 8c-2.65 0-5.05.99-6.9 2.6L2 7v9h9l-3.62-3.62c1.39-1.16 3.16-1.88 5.12-1.88 3.54 0 6.55 2.31 7.6 5.5l2.37-.78C21.08 11.03 17.15 8 12.5 8z"/></svg>
 <svg class="dots" viewBox="0 0 256 256"><path d="M128,24A104,104,0,1,0,232,128,104.11791,104.11791,0,0,0,128,24Zm0,192a88,88,0,1,1,88-88A88.09957,88.09957,0,0,1,128,216Zm12-88a12,12,0,1,1-12-12A12.01375,12.01375,0,0,1,140,128Zm48,0a12,12,0,1,1-12-12A12.01375,12.01375,0,0,1,188,128Zm-96,0a12,12,0,1,1-12-12A12.01375,12.01375,0,0,1,92,128Z"/></svg>
+<svg class="tag" viewBox="0 0 24 24"><path d="M0.614 8.811V1.854C0.667 0.791 1.524 0.013 2.468 0h6.957c1.119 0.07 2.455 0.508 3.172 1.318l10.297 11.462c0.647 0.819 0.665 1.952 0 2.636l-8.06 8.06c-0.79 0.715 -1.969 0.685 -2.636 0L1.932 11.983C1.183 11.099 0.624 9.917 0.614 8.811m3.019 -4.015c0.044 1.034 0.86 1.781 1.778 1.793 1.037 -0.046 1.781 -0.873 1.793 -1.793 -0.046 -1.038 -0.877 -1.765 -1.793 -1.778 -1.035 0.043 -1.766 0.863 -1.778 1.778"/></svg>
+<svg class="note" viewBox="0 0 24 24"><path d="M20 14V7C20 5.34315 18.6569 4 17 4H7C5.34315 4 4 5.34315 4 7V17C4 18.6569 5.34315 20 7 20H13.5M20 14L13.5 20M20 14H15.5C14.3954 14 13.5 14.8954 13.5 16V20"/><path d="M8 8H16"/><path d="M8 12H12"/></svg>
+<svg class="c-tag-head" viewBox="0 0 8.2 24"><path d="M 6.5351838,5 H 8.28 V 19 H 6.5351838 C 5.8664774,19 5.2420147,18.665798 4.8710832,18.1094 L 1.1679497,12.5547 c -0.22393294,-0.335899 -0.22393294,-0.773501 0,-1.1094 L 4.8710832,5.8905996 C 5.2420147,5.3342023 5.8664774,5 6.5351838,5 Z m -3.3333334,7 3.3333334,5 H 8.28 V 7 H 6.5351838 Z M 7,13 c -0.5522848,0 -1,-0.447715 -1,-1 0,-0.552285 0.4477152,-1 1,-1 0.5522847,0 1,0.447715 1,1 0,0.552285 -0.4477153,1 -1,1 z"/></svg>
+<svg class="c-tag-body" viewBox="0 0 24 24"><path d="m 0,4.9999805 v 2.000039 H 24 V 4.9999805 Z M 0,19.00002 H 24 V 16.99998 H 0 c 0,0 0.01079,2.029 0,2.00004 z"/></svg>
+<svg class="c-tag-tail" viewBox="0 0 24 24"><path d="m 0,7.0000195 v 9.9999605 2.00004 c 1.104569,0 1.99998,-0.89547 1.99998,-2.00004 V 7.0000195 C 1.99998,5.89545 1.10457,4.9999805 0,4.9999805 Z"/></svg>
 
 <div class="c-popup-bkg">
 	<div class="c-popup-cont">
@@ -101,9 +106,23 @@
 	<input type="checkbox" _group="0">
 	<label _group="0"></label>
 </div>
+<div class="c-colour-input">
+	<label _group="0"></label>
+	<input type="color" _group="0">
+</div>
 
 <div class="c-popup-text-line">
 	<label></label>
+</div>
+
+<div class="c-popup-scroll-rows">
+	<label></label>
+	<div class="cont"></div>
+</div>
+<div class="c-popup-scroll-row">
+	<div class="left-item"></div>
+	<div class="title-row"></div>
+	<div class="subtitle-row"></div>
 </div>
 
 <div class="c-underline">
