playlist thumbs, fixed album desc editing, update add to queue icon

--- a/extension/myTemplateElements.html
+++ b/extension/myTemplateElements.html
@@ -4,12 +4,12 @@
 			<img class="c-paper-icon">
 			<div class="c-paper-queuenext-btn c-paper-btn small">
 				<svg viewBox="0 0 24 24" class="c-paper-queuenext-icon">
-					<path d="M22,7H2v1h20V7z M13,12H2v-1h11V12z M13,16H2v-1h11V16z M15,19v-8l7,4L15,19z"/>
+					<path d="M6 2.86V5H3a1 1 0 00-1 1v12a1 1 0 102 0V7h2v2.137a.5.5 0 00.748.434L13 5.998 6.748 2.426A.5.5 0 006 2.86ZM21 5h-5a1 1 0 100 2h5a1 1 0 100-2Zm0 6H9a1 1 0 000 2h12a1 1 0 000-2Zm0 6H9a1 1 0 000 2h12a1 1 0 000-2Z"/>
 				</svg>
 			</div>
 			<div class="c-paper-queueadd-btn c-paper-btn small">
 				<svg viewBox="0 0 24 24" class="c-paper-queueadd-icon">
-					<path d="M14,8H2V7h12V8z M10,11H2v1h8V11z M10,15H2v1h8V15z M22,7h-5v7.51C16.58,14.19,16.07,14,15.5,14c-1.38,0-2.5,1.12-2.5,2.5 c0,1.38,1.12,2.5,2.5,2.5c1.35,0,2.44-1.07,2.49-2.4L18,16.58V10h4V7z"/>
+					<path d="M21 6.998a1 1 0 100-2H9a1 1 0 000 2h12ZM6 21.138a.5.5 0 00.748.434L13 18l-6.252-3.573A.5.5 0 006 14.86V17H4V6a1 1 0 00-2 0v12a1 1 0 001 1h3v2.138Zm15-8.14a1 1 0 000-2H9a1 1 0 000 2h12Zm0 6a1 1 0 000-2h-5a1 1 0 000 2h5Z"/>
 				</svg>
 			</div>
 		</div>
@@ -20,7 +20,7 @@
 		<div class="c-paper-button-cont">
 			<div class="bkg-cont">
 				<div class="c-player-bkg"></div>
-			</div>			
+			</div>
 			<div class="c-paper-shfl-btn c-paper-btn small">
 				<svg viewBox="0 0 24 24" class="c-paper-shfl-icon">
 					<path d="M18.15,13.65l3.85,3.85l-3.85,3.85l-0.71-0.71L20.09,18H19c-2.84,0-5.53-1.23-7.39-3.38l0.76-0.65 C14.03,15.89,16.45,17,19,17h1.09l-2.65-2.65L18.15,13.65z M19,7h1.09l-2.65,2.65l0.71,0.71l3.85-3.85l-3.85-3.85l-0.71,0.71 L20.09,6H19c-3.58,0-6.86,1.95-8.57,5.09l-0.73,1.34C8.16,15.25,5.21,17,2,17v1c3.58,0,6.86-1.95,8.57-5.09l0.73-1.34 C12.84,8.75,15.79,7,19,7z M8.59,9.98l0.75-0.66C7.49,7.21,4.81,6,2,6v1C4.52,7,6.92,8.09,8.59,9.98z"/>
@@ -78,6 +78,9 @@
 <svg class="c-tag-head" viewBox="0 0 8.2 24"><path d="M 6.5351838,5 H 8.28 V 19 H 6.5351838 C 5.8664774,19 5.2420147,18.665798 4.8710832,18.1094 L 1.1679497,12.5547 c -0.22393294,-0.335899 -0.22393294,-0.773501 0,-1.1094 L 4.8710832,5.8905996 C 5.2420147,5.3342023 5.8664774,5 6.5351838,5 Z m -3.3333334,7 3.3333334,5 H 8.28 V 7 H 6.5351838 Z M 7,13 c -0.5522848,0 -1,-0.447715 -1,-1 0,-0.552285 0.4477152,-1 1,-1 0.5522847,0 1,0.447715 1,1 0,0.552285 -0.4477153,1 -1,1 z"/></svg>
 <svg class="c-tag-body" viewBox="0 0 24 24"><path d="m 0,4.9999805 v 2.000039 H 24 V 4.9999805 Z M 0,19.00002 H 24 V 16.99998 H 0 c 0,0 0.01079,2.029 0,2.00004 z"/></svg>
 <svg class="c-tag-tail" viewBox="0 0 24 24"><path d="m 0,7.0000195 v 9.9999605 2.00004 c 1.104569,0 1.99998,-0.89547 1.99998,-2.00004 V 7.0000195 C 1.99998,5.89545 1.10457,4.9999805 0,4.9999805 Z"/></svg>
+
+<svg viewBox="0 0 24 24" class="c-paper-queuenext-icon-old"><path d="M22,7H2v1h20V7z M13,12H2v-1h11V12z M13,16H2v-1h11V16z M15,19v-8l7,4L15,19z"/></svg>
+<svg viewBox="0 0 24 24" class="c-paper-queueadd-icon-old"><path d="M14,8H2V7h12V8z M10,11H2v1h8V11z M10,15H2v1h8V15z M22,7h-5v7.51C16.58,14.19,16.07,14,15.5,14c-1.38,0-2.5,1.12-2.5,2.5 c0,1.38,1.12,2.5,2.5,2.5c1.35,0,2.44-1.07,2.49-2.4L18,16.58V10h4V7z"/></svg>
 
 <div class="c-popup-bkg">
 	<div class="c-popup-cont">
