--- a/extension/popup/index.html
+++ b/extension/popup/index.html
@@ -107,6 +107,7 @@
 			<button id="set-token" style="padding: 0;">Set API token to textarea value</button>
 			<button id="set-light-api" style="padding: 0;">Set Lights API to textarea value</button>
 			<button id="set-entities-api" style="padding: 0;">Set EntitiesToKeys TTAV</button>
+			<button id="del-cache-entry" style="padding: 0;">Delete Cache Entry ID TAV</button>
 		</div>
 
 		<a id="error" style="text-align: left; word-break: keep-all;"></a>
