--- a/extension/templateElements.html
+++ b/extension/templateElements.html
@@ -61,7 +61,7 @@
 <svg class="add" viewBox="0 0 24 24"><path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/></svg>
 <svg class="move" viewBox="0 0 24 24"><path d="M12.0001 2.89331L8.81809 6.07529L9.87875 7.13595L11.2501 5.76463V11.2499H5.7649L7.13619 9.8786L6.07553 8.81794L2.89355 11.9999L6.07553 15.1819L7.13619 14.1212L5.76485 12.7499H11.2501V18.2352L9.87875 16.8639L8.81809 17.9245L12.0001 21.1065L15.182 17.9245L14.1214 16.8639L12.7501 18.2352V12.7499H18.2353L16.8639 14.1213L17.9246 15.1819L21.1066 11.9999L17.9246 8.81796L16.8639 9.87862L18.2352 11.2499H12.7501V5.76463L14.1214 7.13595L15.182 6.07529L12.0001 2.89331Z"/></svg>
 <svg class="delete" viewBox="0 0 24 24"><path d="M11,17H9V8h2V17z M15,8h-2v9h2V8z M19,4v1h-1v16H6V5H5V4h4V3h6v1H19z M17,5H7v15h10V5z"/></svg>
-<svg class="expand-up" viewBox="0 0 24 24"><path d="m18 11-6 6L1 5H24Z"/></svg>
+<svg class="expand" viewBox="0 0 24 24"><path d="m18 11-6 6L1 5H24Z"/></svg>
 <svg class="cross" viewBox="0 0 24 24"><path d="M12.7,12l6.6,6.6l-0.7,0.7L12,12.7l-6.6,6.6l-0.7-0.7l6.6-6.6L4.6,5.4l0.7-0.7l6.6,6.6l6.6-6.6l0.7,0.7L12.7,12z"/></svg>
 <svg class="MUSIC_EXPLICIT_BADGE" viewBox="0 0 24 24"><path d="M3,3v18h18V3H3z M16,9h-6v2h6v2h-6v2h6v2H8V7h8V9z"/></svg>
 <svg class="list-remove" viewBox="0 0 24 24"><path d="M19.41,14l2.29,2.29l-1.41,1.41L18,15.41l-2.29,2.29l-1.41-1.41L16.59,14l-2.29-2.29l1.41-1.41L18,12.59l2.29-2.29 l1.41,1.41L19.41,14z M22,8H2V7h20V8z M13,11H2v1h11V11z M13,15H2v1h11V15z"/>></svg>
@@ -135,7 +135,7 @@
 </div>
 
 
-<div class="c-popup-elem-overflow">
+<div class="c-grid-popup">
 	<div class="header">
 		<a>More Elements</a>
 		<a>YTMusic+ added some of these elements that YouTube does not load (eg Albums).<br>Use this space to help re-arrange your sidebar, you can drag elements to and from here.</a>
